Fix dark mode on select2, add schedule audit logs, fix autocomplete trash

--- a/app/static/assets/css/chaotica.css
+++ b/app/static/assets/css/chaotica.css
@@ -153,53 +153,56 @@ Do Force select2 to be phoenix compat
 
 .select2-container--default .select2-dropdown {
   /* The dropdown container where choices are displayed */
-  background-color: var(--phoenix-input-bg, #fff) !important;
-  border-color: var(--phoenix-input-border-color, #aaa) !important;
+  background-color: var(--phoenix-body-bg) !important;
+  border-color: var(--phoenix-input-border-color) !important;
 }
 
 .select2-container--default .select2-selection {
   /* The select field input */
-  background-color: var(--phoenix-input-bg, #fff) !important;
-  border-color: var(--phoenix-input-border-color, #aaa) !important;
+  background-color: var(--phoenix-body-bg) !important;
+  border-color: var(--phoenix-input-border-color) !important;
 }
 
 .select2-container--default .select2-selection .select2-selection__rendered {
   /* Text for the chosen item when the dropdown is closed */
-  color: var(--phoenix-900, #444) !important;
+  color: var(--phoenix-900) !important;
+}
+
+.select2-container--default .select2-results {
+  background-color: var(--phoenix-body-bg);
 }
 
 .select2-container--default .select2-results__option[aria-selected="true"] {
   /* The option that has been chosen */
-  background-color: var(--selected-bg, #ddd);
+  background-color: var(--selected-bg);
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
   /* The search input for the choices */
-  background-color: var(--darkened-bg, #fff);
-  border-color: var(--phoenix-input-border-color, #aaa) !important;
-  color: var(--phoenix-900, #000) !important;
+  background-color: var(--darkened-bg);
+  border-color: var(--phoenix-input-border-color) !important;
+  color: var(--phoenix-900) !important;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
   /* The option that is in focus */
-  background-color: var(--select2-highlighted-bg, #5897fb);
-  color: var(--select2-highlighted-fg, #fff);
+  background-color: var(--select2-highlighted-bg);
+  color: var(--select2-highlighted-fg);
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
   /* Selected choices when multiple are allowed */
-  background-color: var(--phoenix-200, #e4e4e4) !important;
-  border-color: var(--phoenix-input-border-color, #aaa) !important;
+  background-color: var(--phoenix-200) !important;
+  border-color: var(--phoenix-input-border-color) !important;
 }
 
 .select2-container--default .select2-search--inline .select2-search__field {
-  color: var(--phoenix-900, #000) !important;
+  color: var(--phoenix-900) !important;
 }
 
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-  border-color: var(--phoenix-input-border-color, #000) !important;
+  border-color: var(--phoenix-input-border-color) !important;
 }
-
 
 
 .weekend {
